--- a/src/components/PizzaListItem/PizzaListitem.css
+++ b/src/components/PizzaListItem/PizzaListitem.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin: 20px;
     gap: 10px;
 }
 
@@ -12,23 +12,35 @@
     padding: 0x;
     color: black;
     border: 1px solid black;
-    background-color: #e4f2fe;
+    background-color: #3b4095;
     text-align: left;
     font-size: 12px;
     padding-bottom: 80px;
     position: relative;
+    height: 350px;
 }
 
 .pizzaInfo {
     padding: 15px;
+    margin-left: 5px;
 }
 
 .price {
     text-align: right;
+    margin-right: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .pizzaContainer img {
     max-width: 100%;
     height: auto;
     background-color: white;
+}
+
+.pizzaName {
+    text-align: center;
+    margin-left: 5px;
+    text-decoration:underline;
+    font-weight: bolder;
 }
