--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -58,3 +58,9 @@
   color: #0ffef7;
   text-decoration: none;
 }
+
+.totalCostHeader {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+}
