--- a/src/components/PizzaListItem/PizzaListitem.css
+++ b/src/components/PizzaListItem/PizzaListitem.css
@@ -12,7 +12,7 @@
     padding: 0x;
     color: black;
     border: 1px solid black;
-    background-color: #3b4095;
+    background-color: #aacc00;
     text-align: left;
     font-size: 12px;
     padding-bottom: 80px;
